# lxd-rs

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
codegen/: Cargo.toml
codegen/src/: generator.rs  main.rs  parser.rs
crates/lxd/: Cargo.toml
crates/lxd-client/: Cargo.toml
crates/lxd-client/src/: config.rs  error.rs  lib.rs
crates/lxd-client/src/endpoints/: mod.rs
crates/lxd-client/src/transport/: https.rs  mod.rs  unix.rs
crates/lxd-client/tests/: integration_test.rs  unit_tests.rs
crates/lxd-types/: Cargo.toml
crates/lxd-types/src/: common.rs  images.rs  instances.rs  lib.rs  networks.rs  operations.rs  profiles.rs  projects.rs  responses.rs  snapshots.rs  storage.rs
crates/lxd/examples/: unix_socket.rs
crates/lxd/src/: lib.rs
docs/: ARCHITECTURE.md
tests/: integration_test.rs
