[workspace]
resolver = "2"
members = [
    "crates/lxd-types",
    "crates/lxd-client",
    "crates/lxd",
    "codegen",
]

[workspace.package]
edition = "2021"
authors = ["Jeremy Soller <jackpot51@gmail.com>"]
license = "MIT"
repository = "https://github.com/system76/lxd-rs"

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# HTTP clients
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
hyper = { version = "1.0", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http1", "tokio"] }
http-body-util = "0.1"
hyperlocal = "0.9"

# Utilities
thiserror = "1.0"
url = "2.5"
bytes = "1.5"

# Dev dependencies
tokio-test = "0.4"
tempdir = "0.3"
