[package]
name = "lxd-codegen"
version = "0.1.0"
edition = "2021"
publish = false
description = "OpenAPI code generator for lxd-types"

[[bin]]
name = "lxd-codegen"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
heck = "0.5"
quote = "1.0"
proc-macro2 = "1.0"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
syn = "2.0"
prettyplease = "0.2"
regex = "1.12"
