[package]
name = "lxd"
version = "0.2.0"
edition = "2021"
authors = ["Jeremy Soller <jackpot51@gmail.com>"]
description = "A comprehensive Rust library for controlling LXD containers and VMs"
documentation = "https://docs.rs/lxd"
repository = "https://github.com/system76/lxd-rs"
readme = "../../README.md"
license = "MIT"
keywords = ["lxd", "container", "virtualization", "api", "async"]
categories = ["api-bindings", "virtualization", "asynchronous"]

[features]
default = []
# Use generated types from OpenAPI spec (210+ types)
generated = ["lxd-client/generated"]

[dependencies]
lxd-types = { path = "../lxd-types" }
lxd-client = { path = "../lxd-client" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
